Initial commit: Rebranded to TurfKaro with author Shrut Jain

--- a/server/env.sample
+++ b/server/env.sample
@@ -23,4 +23,4 @@ RAZORPAY_KEY_ID =  // razorpay key id
 RAZORPAY_KEY_SECRET = // razorpay key secret
 
 
-// For further details about this project contact me : rijobdk@gmail.com
+// For further details about this project contact me : Shrutbdk@gmail.com
