--- a/client/user/package.json
+++ b/client/user/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "user",
+  "name": "turfkaro-user",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": "Shrut Jain",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -39,6 +40,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.6",
-    "vite": "^5.3.4"
+    "vite": "^7.1.4"
   }
 }
