--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "server",
+  "name": "turfkaro-server",
   "version": "1.0.0",
+  "description": "Backend for TurfKaro",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -8,10 +9,9 @@
     "start": "node server.js",
     "server": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["turfkaro", "booking", "sports"],
+  "author": "Shrut Jain",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "nodemon": "^3.1.4"
   },
